Changing font family

--- a/style.css
+++ b/style.css
@@ -40,8 +40,7 @@ body {
   width: 100%;
   height: 100vh;
   font-size: 1em;
-  font-family: Open Sans Condensed;
-  font-size: normal;
+  font-family: "Bitter", sans-serif;
   line-height: 175%;
   direction: ltr;
   text-align: left;
